# lingua-ai

./: README.md
docs/lingua/: COMPILER.md  EXAMPLES.md  PATTERNS.md  SPEC.md
lingua/: README.md  ast_out.txt  check_impl.py  dbg1.py  dbg2.py  dbg3.py  dbg4.py  dbg4_out.txt  dbg5.py  debug_tokens.py  line15_out.txt  log.txt  output.txt  pyproject.toml  saluto.lingua  saluto2.lingua  saluto_info.txt  show_line15.py  test_box.py  test_lexer_quick.py  test_parser_quick.py  test_script.py  test_unicode.py  test_unicode.txt  tokens_out.txt
lingua/examples/: hello.cp313-win_amd64.pyd  hello.lingua  hello_func.cmd  http_server.lingua  http_server_example.py  saluto.lua
lingua/lingua/: __init__.py  cli.py  generator.py  lexer.py  parser.py  reasoning.py
lingua/tests/: test_lexer.py  test_parser.py  test_reasoning.py
