[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lingua"
version = "1.0.0"
description = "AI-optimized programming language"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
lingua = "lingua.cli:main"

[tool.setuptools.packages.find]
where = ["."]
srcpaths = ["src"]
include = ["lingua*"]

[tool.pytest.ini_options]
testpaths = ["tests"]